<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.beconnected.MainActivity" >

    
    
     <item
        android:id="@+id/action_usuario"
        android:orderInCategory="100"
        android:title="@string/action_usuario"
        app:showAsAction="never"/>
     <item
        android:id="@+id/action_empresa"
        android:orderInCategory="100"
        android:title="@string/action_empresa"
        app:showAsAction="never"/>
       <item
        android:id="@+id/action_promo"
        android:orderInCategory="100"
        android:title="@string/action_promo"
        app:showAsAction="never"/>
        <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/action_info"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sincro"
        android:orderInCategory="100"
        android:title="@string/action_sincro"
        app:showAsAction="never"/>
    
     <item
        android:id="@+id/action_cerrar"
        android:orderInCategory="100"
        android:title="@string/action_cerrar"
        app:showAsAction="never"/>
   
   

</menu>